Hide gallery row break on mobile screens to prevent wrapping bugs

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -59,10 +59,15 @@
     z-index: 10;
 }
 
-/* Row break for the last 2 pictures on desktop/tablet */
+.gallery-break {
+    display: none;
+}
+
 @media (min-width: 600px) {
     .gallery-break {
+        display: block;
         flex-basis: 100%;
+        width: 100%;
         height: 0;
     }
 }
